--- a/A7MinutesWorkout/app/src/main/res/values/colors.xml
+++ b/A7MinutesWorkout/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="themePrimaryGreen">#1AA260</color>
+    <color name="themePrimaryOrange">#FF6200</color>
+
 </resources>
