--- a/A7MinutesWorkout/app/src/main/res/values/themes.xml
+++ b/A7MinutesWorkout/app/src/main/res/values/themes.xml
@@ -2,15 +2,20 @@
     <!-- Base application theme. -->
     <style name="Theme.A7MinutesWorkout" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/themePrimaryGreen</item>
+        <item name="colorPrimaryVariant">@color/themePrimaryGreen</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/themePrimaryGreen</item>
+        <item name="colorSecondaryVariant">@color/themePrimaryGreen</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+    </style>
+
+    <style name="ToolBarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <item name="colorControlNormal">@color/black</item>
     </style>
 </resources>
